# cakcukus

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: calculus.rs  lib.rs  polynomial.rs  term.rs
src/traits/: differentiation.rs  integration.rs  intergration.rs  mod.rs  term.rs
tests/: differentiation.rs  general.rs  integration.rs  polynomial.rs  readme_test.rs  term.rs
